Require `phpunit` and `mockery`.

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,9 @@
         "psr-4": {
             "Omnipay\\Paymongo\\": "src/"
         }
+    },
+    "require-dev": {
+        "mockery/mockery": "^1.3",
+        "phpunit/phpunit": "^9"
     }
 }
