Add license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "A Paymongo driver for Omnipay PHP payment processing library",
     "version": "1.0.0",
     "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "Omar Usman",
